# myhespi

./: .dockerignore  .gitignore  Dockerfile  INSTALL.md  README.rst  myHESPI_ZADANI.md  pyproject.toml  requirements-hespi.txt
.github/workflows/: publish.yml
hespi/: llm.py
k8s/: deployment.yaml  ingress.yaml  secret.yaml.example  service.yaml
myhespi/: README.md  __init__.py  auth.py  config.py  dwc.py  errors.py  openapi.yaml  pyproject.toml  requirements-hespi.txt  requirements.txt  routes_api.py  routes_web.py  wsgi.py
myhespi/app/: __init__.py  __main__.py  auth.py  config.py  dwc.py  routes_api.py  routes_web.py
myhespi/app/services/: hespi_runner.py  storage.py
myhespi/app/templates/: error.html  index.html  result.html
myhespi/services/: hespi_runner.py  storage.py
myhespi/templates/: error.html  index.html  result.html
myhespi/tests/: conftest.py  test_auth.py  test_dwc.py
scripts/: install_full_stack.sh
tests/: test_auth.py  test_dwc.py
