[project]
name = "myhespi"
version = "0.2.0"
description = "Webové rozhraní a API pro HESPI – zpracování herbářových listů a export Darwin Core"
readme = "myhespi/README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
dependencies = []

[tool.setuptools.packages.find]
include = ["myhespi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
